plonetheme/ist_theme/skins/ist_theme_styles/styling.css
/* <dtml-with base_properties> */
/* <dtml-call "REQUEST.set('portal_url', portal_url())"> */

/* begin css rules */

/****************** body ******************/
body {
    background-color: #e5e5e5;
    font-family: Arial, Verdana, FreeSans, sans-serif;
    color: Black;
}
/****************** / body ******************/

/****************** wrapper ******************/
#visual-portal-wrapper {
	background-color: #ffffff;
    width: 80%;
    float:left;
    margin-left: 12%;
    margin-right: 10%;
    -moz-box-shadow: #333 2px 2px 6px; 
    -webkit-box-shadow: #333 2px 2px 6px;
    box-shadow: 2px 2px 6px #333;
}

.section-front-page #visual-portal-wrapper {
	background-color: #e5e5e5;
    width: 75%;
    float:left;
    margin-left: 12%;
    margin-right: 10%;
    -moz-box-shadow: #333 2px 2px 6px; 
    -webkit-box-shadow: #333 2px 2px 6px;
    box-shadow: 2px 2px 6px #333;
}
/****************** / wrapper ******************/
/****************** portal top ******************/
#portal-top { 
	background-color: #e5e5e5;
	margin-bottom: 1em;
}

#portal-header { 
     height: 6em;
}

#portal-logo {
	 display: inline-block;
	 margin: 0;
	 padding: 0;
	 width: 70%;
}

#portal-logo a { float:left; }

#portal-logo a, #portal-logo a:hover, #portal-logo a:visited {
    color: #000000;
    background-color:transparent;
}

#portal-logo a#logo-psu { 
    width: 25%;
    min-width: 100px; 
	padding: 0 0 1%; 
}

#portal-logo a#logo-psu img {  }
   
#portal-logo a {
	/* font-size: 90%; */
    padding: 1.5% 0 0;
    /* width: 70%; */
}

#portal-logo a#logo-site {
	font-family: "Arial, Helvetica, sans-serif, Lucida Grande", Verdana, Lucida;
	text-transform: uppercase;
	text-align: right;
    font-size: 90%;
    padding: 4.5% 0 0;
    width: 72%;
}

.mixed-size {
    font-size: 130%;
}

/****************** / portal top ******************/

/****************** headings ******************/
h1, h2, h3, h4, h5, h6 {
    font-family: "Helvetica Neue", Arial, FreeSans, sans-serif;
    font-weight: bold;
    line-height: 1.5em;
}

h1 { 
	color: &dtml-fontColor;; 
}

h2, h3, h4, h5, h6 {
    color: &dtml-fontColor;;
}

h1 { 
	font-size: 160%;
}

h2 { 
	font-size: 115%; 
}

h3 { 
	font-size: 110%; 
}

h4 {
    font-size: 105%;
}

h5 {
    font-size: 100%;
}

h6 {
    font-size: 90%;
}

h1, h2 {
    letter-spacing: -0.05em;
}

h2 a, h3 a, h4 a {
    border-bottom: none !important;
}

#content h1 {
    margin-top: 0.5em;
}

#content h1.documentFirstHeading {
    margin-top: 0;
	color: &dtml-fontColor;;
}
/***** style for h3 in customized fsd person_view.pt *****/
.fsd-custom {
	margin: 1em 0 0 0;
}

/****************** / headings ******************/

/****************** links ******************/
a { 
	color: &dtml-linkColor;; 
	text-decoration: underline; 
}
a:hover, a:visited:hover { 
	color: &dtml-contentLinkHoverColor;; 
	background-color: none; 
}

a:visited { 
	color: &dtml-contentLinkVisitedColor;;  
}
/****************** / links ******************/

/****************** breadcrumbs ******************/
#portal-breadcrumbs {
    height:1.75em;
    width:100%;
    font-size:.6em;
/* Comment out to remove border 
    border:1px solid #dedede; */
    
/*  Comment out to remove background color */
   /* background-color:#CCC;*/
}

#portal-breadcrumbs span {
    float: left;
    line-height: 1.75em;
    color: #777;
    padding-left: .5em;
} 

#portal-breadcrumbs span.breadcrumbSeparator {
    display: none;
}

#portal-breadcrumbs span a {
    display: block;
    padding: 0 .65em 0 0;
/* Comment out to remove apple arrow graphic after link */
/* If using background color for breadcrumbs, this image will need to be updated
   or commented out */
   background: transparent url(crumbs.gif) no-repeat right center;
}
#portal-breadcrumbs span a:link,
#portal-breadcrumbs span a:visited {
    color:#777;
    text-decoration:none;
}

#portal-breadcrumbs a:link, #portal-breadcrumbs a:visited,	
#portal-breadcrumbs span a:hover,
#portal-breadcrumbs span a:focus {
    color: #003765;
}
/****************** / breadcrumbs ******************/

/****************** edit bar ******************/
#edit-bar .contentActions {
  float:right;
}
/****************** / edit bar ******************/

/****************** content ******************/

#content {
    line-height: 1.5em;
    clear: both;
    font-size: 80%;
    margin: 0 0.25em .5em 0;
}

.documentDescription {
    display: none;
}

#liquid img {
	width: 100%;
	height: auto;
}

#content img.tileImage,
#content div.newsImageContainer {
    float: right;
    margin: 0 1em 0.5em 1em;
}

#content img.tileImage {
    float: left;
    margin: 0 1em 0.5em 1em;
    width: auto;
}

#content div.newsImageContainer a {
    border-bottom: none;
}
#content div.newsImageContainer p.discreet {
    margin: 0;
    padding: 0.5em;
    background-color: #666;
    background-color: rgba(40,40,40,0.7);
    color: White;
    font-weight: bold;
    position: relative;
    width: 23%;
    top: -3em;
}
/* Make sure event details falls into our grid */
div.grid_width_is_7 div.newsImageContainer p.discreet { width:31.51%; margin-left:1.37%; }
div.grid_width_is_9 div.newsImageContainer p.discreet { width:40.825%; margin-left:1.775%; }
div.grid_width_is_10 div.newsImageContainer p.discreet { width:28.29%; margin-left:1.23%; }
div.width_full div.newsImageContainer p.discreet { width:23%; margin-left:1%; }


/* Make sure Images in the content area follow the grid */

div.grid_width_is_7 img, div.grid_width_is_7 img.rightAlign { float:right; margin-left:1.775%; }
div.grid_width_is_9 img, div.grid_width_is_9 img.rightAlign { float:right; margin-left:1.37%; }
div.grid_width_is_10 img, div.grid_width_is_10 img.rightAlign { float:right; margin-left:1.23%; }
div.width_full img, div.width_full img.rightAlign { float:right; margin-left:1%; }

div.grid_width_is_7 img.leftAlign { float:left; margin-right:1.775%; }
div.grid_width_is_9 img.leftAlign { float:left; margin-right:1.37%; }
div.grid_width_is_10 img.leftAlign { float:left; margin-right:1.23%; }
div.width_full img.leftAlign { float:left; margin-right:1%; }

div.grid_width_is_7 img.thin { width:26.033%; margin-left:1.775%; }
div.grid_width_is_9 img.thin { width:20.093%; margin-left:1.37%; }
div.grid_width_is_10 img.thin { width:18.04%; margin-left:1.23%; }
div.width_full img.thin { width:14.667%; margin-left:1%; }

div.grid_width_is_7 img { width:40.825%; margin-left:1.775%; }
div.grid_width_is_9 img { width:31.51%; margin-left:1.37%; }
div.grid_width_is_10 img { width:28.29%; margin-left:1.23%; }
div.width_full img { width:23%; margin-left:1%; }

div.grid_width_is_7 img.wide { width:55.616%; margin-left:1.775%; }
div.grid_width_is_9 img.wide { width:42.926%; margin-left:1.37%; }
div.grid_width_is_10 img.wide { width:38.539%; margin-left:1.23%; }
div.width_full img.wide { width:31.333%; margin-left:1%; }

.eventDetails {
    float: right;
    clear: right;
    margin: 0 0 0.5em 1em;
}
/* Make sure event details falls into our grid */
div.grid_width_is_9 .eventDetails { width:31.507%; margin-left:1.37%; }
div.grid_width_is_7 .eventDetails { width:40.829%; margin-left:1.775%; }
div.grid_width_is_10 .eventDetails { width:38.524%; margin-left:1.23%; }
div.width_full .eventDetails { width:31.333%; margin-left:1%; }

/****************** / content ******************/

/****************** video embeds ******************/
.vid object,
.vid embed {
    width: 100%;
    max-width: 100%;
}

.vid img {
    width: 100%;
    max-width: 100%;
    height: auto;
}

/****************** / video embeds ******************/

/* ----  Personal Tools ---*/
div#portal-personaltools-wrapper {
   /* display:none;*/
    font-size:.8em;
    z-index: 50; /* personaltools should be above #portal-header (with z-index: 2) */
    /* position: fixed; */
    float: right;
    bottom: 0;
    width: 6.33%;
}
dl#portal-personaltools {
    background: #e3e3e3;
    top: 0;
    padding: 0.25em 0.5em;
    font-size: 80%;
    border-top-right-radius: 0.5em;
    border-top-left-radius: 0.5em;
    -webkit-border-top-right-radius: 0.5em;
    -webkit-border-top-left-radius: 0.5em;
    -moz-border-radius-topleft: 0.5em;
    -moz-border-radius-topright: 0.5em;
}
#portal-personaltools #anon-personalbar a {
    float: left;
    margin-right: 0.5em;
}
dl#portal-personaltools #anon-personalbar a:hover, dl#portal-personaltools #anon-personalbar a:visited {
    color:#0645AD; background-color:transparent;
}

/* @group Personal tools pulldown */
#portal-personaltools dl {
}
#portal-personaltools dt {
    font-weight: normal;
}
#portal-personaltools dt.actionMenuHeader a:after {
    content: " ▼";
}
#portal-personaltools dd {
    right: 0;
    margin-top: -1.5em;
    margin-left:5em;
}
#portal-personaltools dd li {
    display:inline;
    float:left;
    clear:none;
}
#portal-personaltools dd {
    background: #e3e3e3;
    padding-bottom: 0.5em;
}
#portal-personaltools dd ul {
    background: #e3e3e3;
    float:left;
}
#portal-personaltools dd li {
    display:inline;
    float:left;
    clear:none;
}
#portal-personaltools dd a {
    line-height: 2em;
    padding: 0 0.75em;
}
#portal-personaltools dd a:hover {
    background: #205c90;
    color: White;
}
/* @end */

/***** site sections *****/

.section-front-page h1, .section-front-page #portal-breadcrumbs {
	display: none;
}

/***** fsd *****/

.facultyStaffDirectory .atozView .alphabetLinks ol li {
    display: inline;
    font-size: 140%;
}

.facultyStaffDirectory .listing {
    border: medium none;
    font-size: 1em;
    margin: 1em 0 1.5em;
    width: 100%;
}


/***** for when you want a bi-column page *****/

#content-column-01 {
    float: left;
    clear: left;
    width: 46%;
}

#content-column-02 {
    float: right;
    clear: right;
    width: 46%;
}

/***** for when you want tile items to take up half the page *****/

.columnTileItem {
    clear: right;
    float: right;
    margin-top: 0.5em;
    padding-top: 0.5em;
    width: 46%;
}

/* Clear Floated Elements
----------------------------------------------------------------------------------------------------*/

/* http://sonspring.com/journal/clearing-floats */

.clear {
    clear: both;
    display: block;
    overflow: hidden;
    visibility: hidden;
    width: 0;
    height: 0;
}

/* http://perishablepress.com/press/2008/02/05/lessons-learned-concerning-the-clearfix-css-hack */

.clearfix:after {
    clear: both;
    content: ' ';
    display: block;
    font-size: 0;
    line-height: 0;
    visibility: hidden;
    width: 0;
    height: 0;
}

.clearfix {
    display: inline-block;
}

* html .clearfix {
    height: 1%;
}

.clearfix {
    display: block;
}

/* end css rules */


/* </dtml-with> */

